--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <button onclick="makeNormal()">Normal</button>
             <br><br>
             <video id="video1" width="420">
-                <source src= "highlight.mp4" type = "vieo/mp4">
+                <source src= "https://files.fm/u/nbthx6ujdx" type = "vieo/mp4">
             </video>
         </b>
             
