--- a/index.html
+++ b/index.html
@@ -202,8 +202,9 @@
             <button onclick="makeSmall()">Small</button>
             <button onclick="makeNormal()">Normal</button>
             <br><br>
-            <video id="video1" width="420">
-                <source src= "highlight.webm" type = "vieo/mp4">
+            <video id="video1" width="420" src ="https://archive.org/details/highlight_202401" controls>
+                <source src = "https://archive.org/details/highlight_202401" type = "video/mp4" >
+
             </video>
         </b>
             
