--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
     <header>
         <h1>Our environment protector</h1>
         <i><h3> By Phạm Duy Anh (ID:23BI14023)</h3></i>
+        <i><p> There are still other pages when you click the link!!</p> </i>
     </header>
 
     <nav>
@@ -240,9 +241,6 @@
         <i><h2>Participate now!!</h2></i>
         <div><p>If you're interested, Please join us in the link below: </p>
         <a href = "ourorganization.org/join_us"> Join us!!! </a></div>
-    </section>
-    <section>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/oVcQTECY_ZQ?si=BUvs1oRTo-Joz1da" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </section>
     <footer style = "position: static;">
         <c style = "align: center">&copy; 2024 Environment Website. All rights reserved.</c>
