--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <header>
         <h1>Our environment protector</h1>
         <i><h3> By Phạm Duy Anh (ID:23BI14023)</h3></i>
-        <i><p> There are still other pages when you click the link!!</p> </i>
+        <i><h3> There are still other pages when you click the link!!</h3> </i>
     </header>
 
     <nav>
