--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <p><li> Since then, our organization has continued getting new members and flourishing</li></p>
         </ul>
         
-        <a href = "https://ginhikat.github.io/Website_about/"> Click here for more information!</a>
+        <a href = "https://ginhikat.github.io/Website_about/" target = "_blank"> Click here for more information!</a>
         </div>
     </section>
     <br>
