--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <i><h2>Our Activities</h2></i>
         <div><p> Below is the footage of our activities against deforestation</p>
         <p> Feel free to submit your work on keeping the Environment fresh in the Link below:</p>
-        <a href = "https://ginhikat.github.io/Website_Footage/"></a> </div>
+        <a href = "https://ginhikat.github.io/Website_Footage/"> Watch our footage here: </a> </div>
     
         <b> 
             <button onclick="playPause()">Play/Pause</button> 
