--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <section id="section2">
         <i><h2>Our Activities</h2></i>
         <div><p> Below is the footage of our activities against deforestation</p>
-        <p> Feel free to submit your work on keeping the Environment fresh in the Link below:</p>
+        <p> Feel free to submit your work on keeping the Environment fresh when we add the submmitting site in the near future!!</p>
         <a href = "https://ginhikat.github.io/Website_Footage/" target = "_blank"> Watch our footage here: </a> </div>
     
 </section>
