--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     <section id="section3">
         <i><h2>Participate now!!</h2></i>
         <div><p>If you're interested, Please join us in the link below: </p>
-        <a href = "ourorganization.org/join_us"> Join us!!! </a></div>
+        <a href = "https://ginhikat.github.io/Website_join/" target = "_blank"> Join us!!! </a></div>
     </section>
     <footer style = "position: static;">
         <c style = "align: center">&copy; 2024 Environment Website. All rights reserved.</c>
