--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <p><li> Since then, our organization has continued getting new members and flourishing</li></p>
         </ul>
         
-        <a href = "https://ginhikat.github.io/Website_about/" target = "_blank"> Click here for more information!</a>
+        <strong><a href = "https://ginhikat.github.io/Website_about/" target = "_blank"> Click here for more information!</a></strong>
         </div>
     </section>
     <br>
@@ -196,14 +196,14 @@
         <i><h2>Our Activities</h2></i>
         <div><p> Below is the footage of our activities against deforestation</p>
         <p> Feel free to submit your work on keeping the Environment fresh when we add the submmitting site in the near future!!</p>
-        <a href = "https://ginhikat.github.io/Website_Footage/" target = "_blank"> Watch our footage here: </a> </div>
+        <strong><a href = "https://ginhikat.github.io/Website_Footage/" target = "_blank"> Watch our footage here: </a> </div></strong>
     
 </section>
 
     <section id="section3">
         <i><h2>Participate now!!</h2></i>
         <div><p>If you're interested, Please join us in the link below: </p>
-        <a href = "https://ginhikat.github.io/Website_join/" target = "_blank"> Join us!!! </a></div>
+        <strong><a href = "https://ginhikat.github.io/Website_join/" target = "_blank"> Join us!!! </a></div></strong>
     </section>
     <footer style = "position: static;">
         <c style = "align: center">&copy; 2024 Environment Website. All rights reserved.</c>
