--- a/index.html
+++ b/index.html
@@ -141,6 +141,26 @@
             right: 0;
             border-radius: 3px 0 0 3px;
         }
+         table {
+            border-collapse: collapse;
+            width: 50%;
+            height:fit-content;
+            margin: 20px;
+            margin-right: 50px;
+            margin-left: auto;
+        }
+
+        th, td {
+            border: 2px solid cyan;
+            padding: 10px;
+            text-align: center;
+            background-color: azure;
+        }
+
+        th {
+            background-color: mediumaquamarine;
+            color: white;
+        }
     </style>
 </head>
 <body>
@@ -180,6 +200,41 @@
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
+        <table style = "display: inline-block; float:right">
+            <b><STRONG><caption> OUR INFLUENCE
+                <br>
+                <br>
+                </caption></STRONG></b>
+            <br>
+            <thead>
+                <tr>
+                    <th>Year</th>
+                    <th>Members</th>
+                    <th>Projects accomplished</th>
+                    <th>Fund raised</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>2021</td>
+                    <td>5.000</td>
+                    <td>10</td>
+                    <td>1.500$</td>
+                </tr>
+                <tr>
+                    <td>2022</td>
+                    <td>36.500</td>
+                    <td>57</td>
+                    <td>76.800$</td>
+                </tr>
+                <tr>
+                    <td>2023</td>
+                    <td>126.700</td>
+                    <td>125</td>
+                    <td>256.000$</td>
+                </tr>
+            </tbody>
+        </table>
         <div><p> The Organization was founded in 2023 with the view to protecting the Environment, along with further practices and learning</p>
         <p> Below is further information about how we started:</p>
         <ul>
